# jukebox-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
migrations/2025-01-13-093834_create_users/: up.sql
migrations/2025-02-06-093021_create_users/: down.sql  up.sql
src/: downloader.rs  identity.rs  main.rs  schema.rs
src/api/: album.rs  artist.rs  fetcher.rs  mod.rs  music.rs  player.rs  playlist.rs  queue.rs  routes.rs  search.rs  user.rs
src/db_handlers/: album.rs  analytics.rs  artist.rs  mod.rs  music.rs  playlist.rs  user.rs
src/downloader/: mod.rs
src/fetcher/: mod.rs  youtube.rs  ytmusic.rs
src/models/: album.rs  analytics.rs  artist.rs  errors.rs  fetcher.rs  mod.rs  music.rs  player.rs  playlist.rs  search.rs  user.rs  youtube.rs
src/player/: mod.rs  source.rs
src/tests/: fetcher.rs  mod.rs
src/tests/db_handlers/: albums.rs  artist.rs  mod.rs  music.rs
